syntax = "proto3";

message ResizeArgs {
  int32 width = 1;
  int32 height = 2;
}
